--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   deploy:
     docker:
-      - image: circleci/clojure:lein-2.9.0
+      - image: cimg/clojure:1.10.1
     steps:
       - checkout
       - run:
